still experiencing issues with tools and wrapping.

--- a/src/components/ContactFloat/ContactFloat.module.scss
+++ b/src/components/ContactFloat/ContactFloat.module.scss
@@ -139,7 +139,7 @@
     &.extended {
       & .headerWrapper {
         & .titleWrapper {
-          font-size: 2vw;
+          font-size: 1.5vw;
         }
 
         & .x {
